--- a/app/views/core/creation_images/show.html.erb
+++ b/app/views/core/creation_images/show.html.erb
@@ -8,6 +8,7 @@
 <p>
   <strong>Image:</strong>
   <%= @core_creation_image.image %>
+  <%= image_tag @core_creation_image.image.thumb.url %>
 </p>
 
 <%= link_to 'Edit', edit_core_creation_image_path(@core_creation_image) %> |
