--- a/app/views/core/creator_images/show.html.erb
+++ b/app/views/core/creator_images/show.html.erb
@@ -8,6 +8,7 @@
 <p>
   <strong>Image:</strong>
   <%= @core_creator_image.image %>
+  <%= image_tag @core_creator_image.image.thumb.url %>
 </p>
 
 <p>
