--- a/app/views/core/report_images/show.html.erb
+++ b/app/views/core/report_images/show.html.erb
@@ -8,6 +8,7 @@
 <p>
   <strong>Image:</strong>
   <%= @core_report_image.image %>
+  <%= image_tag @core_report_image.image.thumb.url %>
 </p>
 
 <%= link_to 'Edit', edit_core_report_image_path(@core_report_image) %> |
