file uploader added.

--- a/app/views/core/pieces/_form.html.erb
+++ b/app/views/core/pieces/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :file_name %><br>
-    <%= f.text_area :file_name %>
+    <%= f.label :file %><br>
+    <%= f.file_field :file %>
   </div>
   <div class="field">
     <%= f.label :format %><br>
