--- a/app/views/core/pieces/index.html.erb
+++ b/app/views/core/pieces/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= core_piece.creation %></td>
         <td><%= core_piece.name %></td>
         <td><%= core_piece.description %></td>
-        <td><%= core_piece.file_name %></td>
+        <td><%= core_piece.file %></td>
         <td><%= core_piece.format %></td>
         <td><%= core_piece.image %></td>
         <td><%= link_to 'Show', core_piece %></td>
