Testing. CreateCreationLogic, UpdateCreationLogic

--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -10,5 +10,10 @@
   <%= @site.url %>
 </p>
 
+<p>
+  <strong>Access key:</strong>
+  <%= @site.access_key %>
+</p>
+
 <%= link_to 'Edit', edit_site_path(@site) %> |
 <%= link_to 'Back', sites_path %>
