--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :url %><br>
     <%= f.text_field :url %>
   </div>
+  <div class="field">
+    <%= f.label :access_key %><br>
+    <%= f.text_field :access_key %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
